--- a/css/estiloscontacto.css
+++ b/css/estiloscontacto.css
@@ -7,13 +7,18 @@
 body{
     font-family: 'Montserrat', sans-serif;
     font-size: 14px;
+    background-color: transparent;
 
 }
 
 header{
     background-color:#11242c;
     height: 90px;
-    
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+
 }
 .encabezado{
     
@@ -66,6 +71,7 @@ ul{
     margin-top: 20px;
     font-size: 35px;
     font-weight: 900;
+    padding-top: 90px;
 }
 .formulario{
     line-height: 40px;
@@ -153,3 +159,17 @@ ul{
     width: 100%;
     height: 400px;
 }
+
+.fijar{
+    position: fixed;
+    bottom: 0;
+    right: 0; 
+    margin: 20px;
+  
+}
+.fijar_boton{
+    background-color: #25d366;
+    padding: 6px;
+    font-size: 40px;
+    border-radius: 100%; 
+ } 
