--- a/css/estilosestudio.css
+++ b/css/estilosestudio.css
@@ -14,6 +14,11 @@ body{
 header{
     background-color:#11242c;
     height: 90px;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
       
 }
 .encabezado{
@@ -79,6 +84,7 @@ ul{
     margin-top: 20px;
     font-size: 35px;
     font-weight: 900;
+    padding-top: 90px;
 }
 .dra{
     text-align: center;
@@ -89,58 +95,15 @@ footer{
     background-color:#11242c;
 }
 .container_footer{
-    display: flex;
-    justify-content: space-around;
-    gap: 750px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding: 20px;
     color: white;
 }
 
 .navegacion{
     display: table;
     line-height: 25px;
+}
 
-}
-.redes{
-    display: flex;
-    justify-content:space-between;
-    margin-top: 15px;
-    width: 200px;
-}
-.facebook{
-    font-size: 25px;
-    background-color: #3b5998;
-    border-radius: 0%;
-    padding: 3px;
-}
-.twitter{
-    font-size: 25px;
-    background-color: #00acee;
-    border-radius: 0%;
-    padding: 3px;
-
-}
-.linkedin{
-    font-size: 25px;
-    background-color:#0072b1;
-    border-radius: 0%;
-    padding: 3px;
-
-}
-.instagram{
-    font-size: 25px;
-    background-color:#C13584;
-    border-radius: 0%;
-    padding: 3px;
-
-}
-.whatsapp{
-    font-size: 25px;
-    background-color:#25d366;
-    border-radius: 0%;
-    padding: 3px;
-}
 a{
     text-decoration: none;
     color: white;
