--- a/css/estilosindex.css
+++ b/css/estilosindex.css
@@ -13,10 +13,15 @@ body{
 header{
     background-color:#11242c;
     height: 90px;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
     
+
 }
 .encabezado{
-    
     display: flex;
     justify-content: space-around;
     padding-top: 25px;
@@ -55,79 +60,257 @@ ul{
     justify-content: space-between;
 }
 
-.hero{
-    background-image: url(Imagenes/0.jpg);
-    background-size: cover;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-position-y: bottom;
-    height: 600px; 
+
+.video{
     width: 100%;
-    color: white;
-    font-size: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    height: 100%;
+    position:relative;
+    bottom: -3px;
+    opacity: 0.7;
+   
+
+}
+.frase_autor{
+    color:black;
+    line-height: 60px;
+    position: absolute;
+    width: 100%;
     text-align: center;
-    opacity: 0.9;
-    font-weight: 400;
-    line-height: 50px;
+    margin-top: -380px;   
+}
+.frase{
+    font-weight: 600;
+    font-size: 60px;
+}
+.autor{
+    font-size: 35px;
+}
+.seccion_estudio{
+    background-color: transparent
+}
+.seccion{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 30px;
+    padding-bottom: 50px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+.estudio{
+    width: 45%;
+    text-align: justify;
+    line-height: 35px;
+    font-size:larger;
+    margin-top: 0px;  
+}
+.elestudio{
+    text-align: center;
+    font-size: 35px;
+    font-weight: 900;
+    padding-top: 30px;
+}
+.linea{
+    background-color: #11242c;
+    width: 100px;
+    height: 10px;
+    margin-left: 580px;
+    margin-top: 10px;
+ 
+}
+.dra{
+    text-align: center;
+    line-height: 70px;
+}
+
+.seccion_general{
+    background-color: #dddbcb;
+    padding-bottom: 40px;
     
 }
+
+.servicios{
+    text-align: center;
+    padding-top: 30px;
+    color: black;
+    font-size: 35px;
+    font-weight: 900;
+    
+}
+
+.seccion_servicios{
+    display: flex;
+    justify-content: space-between;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 60px;
+    padding-top: 35px;
+    color:black;
+}
+.derecho_familia{
+    width: 30%;
+    height: 400px;
+    text-align: center;
+    font-size: 13px;
+}
+.derecho_sucesorio{
+    width: 30%;
+    height: 400px;
+    text-align: center;
+    font-size: 13px;
+}
+.abogacia_preventiva{
+    width: 30%;
+    height: 400px;
+    text-align: center;
+    font-size: 13px;
+}
+.consulta_boton{
+    background-color: #11242c;
+    font-size: x-large;
+    width: 220px;
+    margin: auto;
+    text-align: center;
+    padding: 15px;
+    margin-top: -120px;
+    font-size: 20px;  
+    
+}
+a{
+    color: white;
+    text-decoration: none;
+}
+
+.seccion_contacto{
+    background-color: #e8e8e8;
+}
+.contacto_formulario{
+    display: flex;
+    justify-content: space-between;
+    margin: 50px;
+    margin-top: 30px;
+}
+.contacto{
+    text-align: center;
+    font-size: 35px;
+    font-weight: 900;
+    padding-top: 30px;
+}
+.formulario{
+    line-height: 40px;
+    width: 50%;
+    margin-left: 30px;
+}
+.comentarios{
+    line-height: 30px;
+}
+.textos{
+    width: 500px;
+    height: 25px;
+}
+.mensaje{
+    margin-top: 7px;
+    width: 500px;
+    font-family:Arial, Helvetica, sans-serif;
+}
+.botones{  
+    width: 120px;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 380px;
+}
+.boton{
+    padding: 5px;
+}
+.datos_contacto{
+    width: 40%;
+    margin-right: -20px;
+}
+.oficina{
+    text-align: center;
+    margin-top: 5px;
+}
+.direccion_icono{
+    font-size: 30px;
+    background-color: #11242c;
+    color: white;
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    padding: 5px;
+}
+.email_icono{
+    font-size: 30px;
+    background-color: #11242c;
+    color: white;
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    padding: 5px;
+}
+.cel_icono{
+    font-size: 30px;
+    background-color: #11242c;
+    color: white;
+    height: 30px;
+    width: 29px;
+    border-radius: 50%;
+    padding: 6px;
+}
+.horario_icono{
+    font-size: 30px;
+    background-color: #11242c;
+    color: white;  
+    border-radius: 100%;
+    padding: 6px;
+    width: 30px;
+    height: 30px;
+}
+
+.direccion{
+    display: flex;
+    margin-left: 10px;
+    margin-top: 15px;
+
+}
+.direccion_texto{
+    margin-left: 10px;
+    line-height: 30px;
+}
+.mapa{
+    margin-top: 20px;
+    width: 100%;
+    height: 400px;
+}
+.fijar{
+    position: fixed;
+    bottom: 0;
+    right: 0; 
+    margin: 20px;
+    margin-bottom: 30px;
+  
+}
+.fijar_boton{
+    background-color: #25d366;
+    padding: 6px;
+    font-size: 40px;
+    border-radius: 100%;
+}
+
+
 footer{
     background-color:#11242c;
 }
 .container_footer{
-    display: flex;
-    justify-content: space-around;
-    gap: 750px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding: 20px;
     color: white;
+    display: flex;
+    justify-content: space-between;
+    
 }
 .navegacion{
     display: table;
     line-height: 25px;
-
-}
-.redes{
-    display: flex;
-    justify-content:space-between;
-    margin-top: 15px;
-    width: 200px;
-}
-.facebook{
-    font-size: 25px;
-    background-color: #3b5998;
-    border-radius: 0%;
-    padding: 3px;
-}
-.twitter{
-    font-size: 25px;
-    background-color: #00acee;
-    border-radius: 0%;
-    padding: 3px;
-
-}
-.linkedin{
-    font-size: 25px;
-    background-color:#0072b1;
-    border-radius: 0%;
-    padding: 3px;
-
-}
-.instagram{
-    font-size: 25px;
-    background-color:#C13584;
-    border-radius: 0%;
-    padding: 3px;
-
-}
-.whatsapp{
-    font-size: 25px;
-    background-color:#25d366;
-    border-radius: 0%;
-    padding: 3px;
 }
 a{
     text-decoration: none;
@@ -136,3 +319,8 @@ a{
 .titulo{
     font-size: 17px;
 }
+.derechos_reservados{
+    color: white;
+}
+
+/* MEDIA QUERYS */
