--- a/css/estilosservicios.css
+++ b/css/estilosservicios.css
@@ -12,8 +12,12 @@ body{
 
 header{
     background-color:#11242c;
+    position: fixed;
+    top: 0;
+    left: 0;
     height: 90px;
-    
+    width: 100%;
+    z-index: 100;
 }
 .encabezado{
     
@@ -61,6 +65,7 @@ ul{
     color: black;
     font-size: 35px;
     font-weight: 900;
+    padding-top: 90px;
 }
 
 .seccion_servicios{
@@ -108,11 +113,7 @@ footer{
     background-color:#11242c;
 }
 .container_footer{
-    display: flex;
-    justify-content: space-around;
-    gap: 750px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding: 20px;
     color: white;
 }
 .navegacion{
@@ -120,45 +121,7 @@ footer{
     line-height: 25px;
 
 }
-.redes{
-    display: flex;
-    justify-content:space-between;
-    margin-top: 15px;
-    width: 200px;
-}
-.facebook{
-    font-size: 25px;
-    background-color: #3b5998;
-    border-radius: 0%;
-    padding: 3px;
-}
-.twitter{
-    font-size: 25px;
-    background-color: #00acee;
-    border-radius: 0%;
-    padding: 3px;
 
-}
-.linkedin{
-    font-size: 25px;
-    background-color:#0072b1;
-    border-radius: 0%;
-    padding: 3px;
-
-}
-.instagram{
-    font-size: 25px;
-    background-color:#C13584;
-    border-radius: 0%;
-    padding: 3px;
-
-}
-.whatsapp{
-    font-size: 25px;
-    background-color:#25d366;
-    border-radius: 0%;
-    padding: 3px;
-}
 a{
     text-decoration: none;
     color: white;
