--- a/css/estilosindex.css
+++ b/css/estilosindex.css
@@ -3,11 +3,13 @@
     padding: 0;
     box-sizing: 0;
 }
+html{
+    scroll-behavior: smooth;
+}
 
 body{
     font-family: 'Montserrat', sans-serif;
     font-size: 14px;
-
 }
 
 header{
@@ -18,15 +20,13 @@ header{
     top: 0;
     left: 0;
     z-index: 100;
-    
-
 }
+
 .encabezado{
     display: flex;
     justify-content: space-around;
     padding-top: 25px;
     gap: 350px;
-
 }
 .logo_nombre{
     width: 25%;
@@ -60,14 +60,11 @@ ul{
     justify-content: space-between;
 }
 
-
 .video{
     width: 100%;
-    height: 100%;
-    position:relative;
     bottom: -3px;
     opacity: 0.7;
-   
+    position: relative;
 
 }
 .frase_autor{
@@ -323,4 +320,11 @@ a{
     color: white;
 }
 
-/* MEDIA QUERYS */
+@media (max-width: 768px) {
+    body {
+        background-color: aquamarine;
+    }
+    header{
+        width: 80%;
+    }
+}
