--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3009,8 +3009,9 @@ textarea.form-control-lg {
 
 .btn-primary {
   color: #fff;
-  background-color: #0d6efd;
-  border-color: #0d6efd;
+  background-color: #11242c;
+  border-color: #11242c;
+  
 }
 .btn-primary:hover {
   color: #fff;
@@ -4436,19 +4437,19 @@ textarea.form-control-lg {
   color: rgba(0, 0, 0, 0.9);
 }
 .navbar-light .navbar-toggler {
-  color: rgba(0, 0, 0, 0.55);
-  border-color: rgba(0, 0, 0, 0.1);
+  color: white;
+  border-color: transparent;
 }
 .navbar-light .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='white' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 .navbar-light .navbar-text {
-  color: rgba(0, 0, 0, 0.55);
+  color: white;
 }
 .navbar-light .navbar-text a,
 .navbar-light .navbar-text a:hover,
 .navbar-light .navbar-text a:focus {
-  color: rgba(0, 0, 0, 0.9);
+  color:white;
 }
 
 .navbar-dark .navbar-brand {
@@ -5966,6 +5967,7 @@ textarea.form-control-lg {
 
 .carousel {
   position: relative;
+
 }
 
 .carousel.pointer-event {
@@ -5976,6 +5978,11 @@ textarea.form-control-lg {
   position: relative;
   width: 100%;
   overflow: hidden;
+  
+}
+.carousel-item>img{
+  max-height: 500px;
+  
 }
 .carousel-inner::after {
   display: block;
