--- a/css/estiloscontacto.css
+++ b/css/estiloscontacto.css
@@ -1,175 +1,269 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:wght@300&family=Roboto&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@300&family=Roboto&display=swap');
+
 *{
     margin: 0;
     padding: 0;
-    box-sizing: 0;
+    box-sizing: border-box;
+}
+
+html{
+    scroll-behavior: smooth;
 }
 
 body{
     font-family: 'Montserrat', sans-serif;
     font-size: 14px;
-    background-color: transparent;
-
 }
 
 header{
     background-color:#11242c;
-    height: 90px;
     width: 100%;
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 100;
+    font-size: 15px;
+}
+#navlinks{
+    display:flex;
+    white-space: nowrap;
+    padding-right: 0px;
+    font-size: 14px;
+    gap: 50px;
+}
 
-}
-.encabezado{
-    
-    display: flex;
-    justify-content: space-around;
-    padding-top: 25px;
-    gap: 350px;
-
-}
-.logo_nombre{
-    width: 25%;
-    display: flex;
-    padding-top: 5px;
-}
-.nombre_sitio{
+a{
     color: white;
-    font-size: 17px;
     text-decoration: none;
-    position: relative;
-    top: 3.5px;
 }
-.logo{
-    margin-top: -4.1px;
-}
-.nav{
-    text-decoration: none;
-    color: white;
-}
-.panel_nav{
-    margin-right: 30px;
-    width: 40%;
-    padding-top: 13px;
-    justify-content: center;  
 
-}
 ul{
     list-style: none;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between;   
 }
 
-.contacto_formulario{
-    display: flex;
-    justify-content: space-between;
-    margin: 50px;
-    margin-top: 30px;
+h3{
+    font-size: 20px;
+    font-weight: 600;
 }
+
+.nombre_sitio{
+    font-size: 16px;
+}
+.seccion_contacto{
+    background-color: #e8e8e8;
+}
+
 .contacto{
     text-align: center;
-    margin-top: 20px;
     font-size: 35px;
     font-weight: 900;
-    padding-top: 90px;
+    padding-top: 30px;
+    padding-bottom: 40px;
 }
-.formulario{
-    line-height: 40px;
-    width: 50%;
-    margin-left: 30px;
+.consulta{
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: 5px;
+}
+
+.boton_enviar{
+    display: flex;
+    justify-content: flex-end;
 }
 .comentarios{
     line-height: 30px;
+    font-size: 15px;
+    text-align: justify;
 }
-.textos{
-    width: 500px;
-    height: 25px;
-}
-.mensaje{
-    margin-top: 7px;
-    width: 500px;
-    font-family:Arial, Helvetica, sans-serif;
-}
-.botones{  
-    width: 120px;
-    display: flex;
-    justify-content: space-between;
-    margin-left: 380px;
-}
-.boton{
-    padding: 5px;
-}
+
 .datos_contacto{
-    width: 40%;
-    margin-right: -20px;
+    padding-left: 80px;
 }
+
 .oficina{
     text-align: center;
-    margin-top: 5px;
+    font-size: 25px;
+    font-weight: 600;
 }
 .direccion_icono{
-    font-size: 30px;
-    background-color: #11242c;
-    color: white;
-    height: 30px;
-    width: 30px;
-    border-radius: 50%;
-    padding: 5px;
+    font-size: 35px;
 }
 .email_icono{
-    font-size: 30px;
-    background-color: #11242c;
-    color: white;
-    height: 30px;
-    width: 30px;
-    border-radius: 50%;
-    padding: 5px;
+    font-size: 35px;
 }
 .cel_icono{
-    font-size: 30px;
-    background-color: #11242c;
-    color: white;
-    height: 30px;
-    width: 29px;
-    border-radius: 50%;
-    padding: 6px;
+    font-size: 35px;
 }
 .horario_icono{
-    font-size: 30px;
-    background-color: #11242c;
-    color: white;
-    height: 30px;
-    width: 30px;
-    border-radius: 50%;
-    padding: 5px;
+    font-size: 35px;
 }
 
 .direccion{
     display: flex;
     margin-left: 10px;
     margin-top: 15px;
-
 }
 .direccion_texto{
     margin-left: 10px;
     line-height: 30px;
 }
 .mapa{
-    margin-top: 50px;
+    margin-top: 20px;
     width: 100%;
     height: 400px;
 }
-
 .fijar{
     position: fixed;
     bottom: 0;
     right: 0; 
     margin: 20px;
+    margin-bottom: 30px;
   
 }
 .fijar_boton{
     background-color: #25d366;
     padding: 6px;
     font-size: 40px;
-    border-radius: 100%; 
- } 
+    border-radius: 100%;
+}
+
+footer{
+    background-color:#11242c;
+}
+.container_footer{
+    padding: 20px;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    
+}
+.navegacion{
+    display: table;
+    line-height: 25px;
+    padding: 0;
+}
+
+.titulo{
+    font-size: 17px;
+    font-weight: 700;
+}
+.derechos_reservados{
+    color: white;
+}
+@media (max-width: 500px){
+
+    .datos_contacto{
+        padding-left: 0;
+        margin-top: 30px;
+    }
+    .oficina{
+        padding-bottom: 15px;
+    }
+    .contacto{
+        padding-bottom: 20px;
+        font-size: 25px;
+    }
+    .consulta{
+        font-size: 18px;
+    }
+    .comentarios{
+        font-size: 13px;
+    }
+    .direccion_icono{
+        font-size: 30px;
+    }
+    .email_icono{
+        font-size: 30px;
+    }
+    .cel_icono{
+        font-size: 30px;
+    }
+    .horario_icono{
+        font-size: 30px;
+    }  
+
+    .direccion_texto{
+        margin-left: 10px;
+        line-height: 30px;
+    }
+
+    .container_footer{
+        flex-direction: column;
+        line-height: 25px;
+    }
+    .titulo{
+        font-size: 15px;
+    }
+    .derechos_reserv{
+        padding-top: 5px;
+        text-align: center;
+    }  
+}
+@media (min-width: 501px){    
+    .datos_contacto{
+        padding-left: 10px;
+    }
+    .oficina{
+        padding-bottom: 15px;
+    }
+    .contacto{
+        padding-bottom: 20px;
+        font-size: 30px;
+    }
+    .consulta{
+        font-size: 24px;
+    }
+    .comentarios{
+        font-size: 16px;
+    }
+}
+@media (min-width: 768px){
+    .contacto{
+        font-size: 30px;
+    }
+    .consulta{
+        font-size: 20px;
+        font-weight: 600;
+        margin-top: 5px;
+    }
+}
+@media (max-width: 991px){
+    #navlinks{
+        gap: 10px;
+    }
+}
+@media (min-width: 1000px){
+    .oficina{
+        padding-bottom: 15px;
+    }
+    .contacto{
+        padding-bottom: 40px;
+        font-size: 35px;
+    }
+    .consulta{
+        font-size: 24px;
+    }
+    .comentarios{
+        font-size: 16px;
+    }
+    .datos_contacto{
+        padding-left: 80px;
+        font-size: 16px;
+    }
+   
+}
+
+
+
+
+
+
+
+
+
+
+
