--- a/css/estilosestudio.css
+++ b/css/estilosestudio.css
@@ -1,113 +1,208 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:wght@300&family=Roboto&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@300&family=Roboto&display=swap');
+
 *{
     margin: 0;
     padding: 0;
-    box-sizing: 0;
+    box-sizing: border-box;
 }
 
 body{
-    background-color: transparent;
     font-family: 'Montserrat', sans-serif;
     font-size: 14px;
-
 }
 
 header{
     background-color:#11242c;
-    height: 90px;
     width: 100%;
     position: fixed;
     top: 0;
     left: 0;
     z-index: 100;
-      
+    font-size: 15px;
 }
-.encabezado{
-    
-    display: flex;
-    justify-content: space-around;
-    padding-top: 25px;
-    gap: 250px;
+#navlinks{
+    display:flex;
+    white-space: nowrap;
+    padding-right: 0px;
+    font-size: 14px;
+    gap: 50px;
+}
 
-}
-.logo_nombre{
-    width: 25%;
-    display: flex;
-    padding-top: 5px;
-
-}
-.nombre_sitio{
+a{
     color: white;
-    font-size: 17px;
     text-decoration: none;
-    position: relative;
-    top: 3.5px;
 }
-.logo{
-    margin-top: -4.1px;
-    
-}
-.nav{
-    text-decoration: none;
-    color: white;
-}
-.panel_nav{
-    margin-right: 30px;
-    width: 40%;
-    padding-top: 13px;
-    justify-content: center;  
 
-}
 ul{
     list-style: none;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between;   
 }
 
-.seccion{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: 30px;
-    margin-bottom: 50px;
-    margin-left: 30px;
-    margin-right: 30px;
+h3{
+    font-size: 20px;
+    font-weight: 600;
 }
+
+.nombre_sitio{
+    font-size: 16px;
+}
+.seccion_estudio{
+    background-color: #f5f1e3;
+    font-size: 18px;
+    padding-top: 80px;
+    padding-bottom: 70px;
+}
+
 .estudio{
-    width: 45%;
     text-align: justify;
     line-height: 35px;
-    font-size:larger;
-    margin-top: 0px;  
+    padding-bottom: 100px;
+
 }
-.elestudio{
-    text-align: center;
-    margin-top: 20px;
+.el_estudio{
     font-size: 35px;
     font-weight: 900;
-    padding-top: 90px;
+    padding-top: 30px;
+    line-height: 70px;
+    text-align: center;
 }
+
 .dra{
     text-align: center;
     line-height: 70px;
+    font-weight: 900;
+    font-size: 25px;
 }
-
+.imagen{
+    height: 100%;
+}
 footer{
     background-color:#11242c;
 }
 .container_footer{
     padding: 20px;
     color: white;
+    display: flex;
+    justify-content: space-between;
+    
 }
-
 .navegacion{
     display: table;
     line-height: 25px;
+    padding: 0;
 }
 
-a{
-    text-decoration: none;
-    color: white;
-}
 .titulo{
     font-size: 17px;
+    font-weight: 700;
+}
+.derechos_reservados{
+    color: white;
+}
+
+@media (max-width: 500px){
+
+    .seccion_estudio{
+        font-size: 13px;
+    }
+    
+    .estudio{
+        text-align: justify;
+        line-height: 35px;
+        padding-bottom: 30px;
+    }
+
+    .el_estudio{
+        font-size: 25px;
+    }
+    
+    .dra{
+        line-height: 40px;
+        font-size: 18px;
+    }
+
+    .container_footer{
+        flex-direction: column;
+        line-height: 25px;
+    }
+    .titulo{
+        font-size: 15px;
+    }
+    .derechos_reserv{
+        padding-top: 5px;
+        text-align: center;
+    }
+    
+}
+@media (min-width: 501px){
+   
+    .estudio{
+        line-height: 45px;
+        padding-bottom: 30px;
+    }
+    .el_estudio{
+        font-size: 30px;
+    }
+    
+    .dra{
+        line-height: 40px;
+        font-size: 24px;
+    }
+
+}
+@media (min-width: 768px){
+    
+    .seccion_estudio{
+        font-size: 16px;
+    }
+    
+    .estudio{
+        line-height: 35px;
+        padding-bottom: 50px;
+    }
+    .el_estudio{
+        font-size: 30px;
+    } 
+    .dra{
+        line-height: 55px;
+        font-size: 20px;
+    }
+    .imagen{
+        height: 80%;
+        padding-top: 100px;
+    }
+ 
+}
+@media (max-width: 991px){
+    #navlinks{
+        gap: 10px;
+    }
+}
+@media (min-width: 1000px){
+
+    .estudio{
+        line-height: 45px;
+        padding-bottom: 80px;
+    }
+    .seccion_estudio{
+        font-size: 18px;
+    }
+    .el_estudio{
+        font-size: 35px;
+    }
+    
+    .dra{
+        line-height: 40px;
+        font-size: 25px;
+    }
+    
+    .imagen{
+        height: 100%;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }      
+   
 }
