--- a/css/estilosindex.css
+++ b/css/estilosindex.css
@@ -26,48 +26,43 @@ header{
     z-index: 100;
     font-size: 15px;
 }
+#navlinks{
+    display:flex;
+    white-space: nowrap;
+    padding-right: 0px;
+    font-size: 14px;
+    gap: 50px;
+}
+
 a{
     color: white;
     text-decoration: none;
 }
+
 ul{
     list-style: none;
     display: flex;
     justify-content: space-between;   
 }
 
-.encabezado{
-    display: flex;
-    justify-content: space-between;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-
-.logo_nombre{
-    display: flex;
-    align-items: center;
-    margin-left: 4px;
-}
-.logo{
-    margin-top: 8px;
+h3{
+    font-size: 20px;
+    font-weight: 600;
 }
 
 .nombre_sitio{
     font-size: 16px;
 }
 
-.panel_nav{
-    margin-right: 40px;
-    width: 40%;
-    padding-top: 17px;
-}
-
 .banner_video {
     position: relative;
+    line-height: 0;
+
 }
 .video {
     width: 100%;
     opacity: 0.7;
+    height: auto;
 }
 
 .frase_autor {
@@ -77,6 +72,7 @@ ul{
     transform: translateY(-50%);
     width: 100%;
     text-align: center;
+    line-height: 50px;
 }
 
 .frase {
@@ -87,43 +83,39 @@ ul{
 .autor {
     font-size: 35px;
 }
+
 .seccion_estudio{
-    padding-top: 0px;
-    padding-bottom: 10px;
+    background-color: #f5f1e3;
+    font-size: 18px;
 }
 
-.seccion{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding-top: 50px;
-    padding-bottom: 70px;
-    padding-left: 30px;
-    padding-right: 30px;
-}
 .estudio{
-    width: 45%;
     text-align: justify;
     line-height: 35px;
-    font-size:larger;
-    margin-top: 0px;  
+    padding-bottom: 100px;
+
 }
-.elestudio{
-    text-align: center;
+.el_estudio{
     font-size: 35px;
     font-weight: 900;
     padding-top: 30px;
+    line-height: 70px;
+    text-align: center;
 }
 
 .dra{
     text-align: center;
     line-height: 70px;
+    font-weight: 900;
+    font-size: 25px;
+}
+.imagen{
+    height: 100%;
 }
 
 .seccion_general{
     background-color: #dddbcb;
-    padding-bottom: 70px;
-    
+    padding-bottom: 70px;   
 }
 
 .servicios{
@@ -132,101 +124,66 @@ ul{
     color: black;
     font-size: 35px;
     font-weight: 900;
-    
+    padding-bottom: 30px;    
 }
 
-.seccion_servicios{
-    display: flex;
-    justify-content: space-between;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-bottom: 70px;
-    padding-top: 40px;
-    color:black;
+h5{
+    font-size: 40px;
+    font-weight: 800;
+    background-color: rgba(202, 197, 197, 0.356);
 }
-.derecho_familia{
-    width: 30%;
-    height: 400px;
-    text-align: center;
-    font-size: 13px;
-}
-.derecho_sucesorio{
-    width: 30%;
-    height: 400px;
-    text-align: center;
-    font-size: 13px;
-}
-.abogacia_preventiva{
-    width: 30%;
-    height: 400px;
-    text-align: center;
-    font-size: 13px;
-}
+
 .consulta_boton{
     background-color: #11242c;
     width: 250px;
     margin: auto;
-    text-align: center;
+    text-align:center;
     padding: 15px;
-    margin-top: -120px;
+    margin-top: 50px;
     font-size: 20px;  
 }
 
 .seccion_contacto{
     background-color: #e8e8e8;
 }
-.contacto_formulario{
-    display: flex;
-    justify-content: space-between;
-    margin: 40px;
-    margin-top: 30px;
-}
+
 .contacto{
     text-align: center;
     font-size: 35px;
     font-weight: 900;
     padding-top: 30px;
+    padding-bottom: 40px;
 }
-.formulario{
-    line-height: 40px;
-    width: 50%;
+.consulta{
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: 5px;
 }
-.comentarios{
-    line-height: 30px;
-    text-align: justify;
-}
-.textos{
-    width: 100%;
-    height: 25px;
-}
-.mensaje{
-    margin-top: 7px;
-    width: 100%;
-    font-family:Arial, Helvetica, sans-serif;
-}
-.botones {  
+
+.boton_enviar{
     display: flex;
     justify-content: flex-end;
 }
-
-.boton {
-    padding: 5px;
+.comentarios{
+    line-height: 30px;
+    font-size: 15px;
+    text-align: justify;
 }
 
 .datos_contacto{
-    width: 40%;
+    padding-left: 80px;
 }
+
 .oficina{
     text-align: center;
-    margin-top: 5px;
+    font-size: 25px;
+    font-weight: 600;
 }
 .direccion_icono{
     font-size: 35px;
-
 }
 .email_icono{
     font-size: 35px;
-
 }
 .cel_icono{
     font-size: 35px;
@@ -239,7 +196,6 @@ ul{
     display: flex;
     margin-left: 10px;
     margin-top: 15px;
-
 }
 .direccion_texto{
     margin-left: 10px;
@@ -278,49 +234,28 @@ footer{
 .navegacion{
     display: table;
     line-height: 25px;
+    padding: 0;
 }
 
 .titulo{
     font-size: 17px;
+    font-weight: 700;
 }
 .derechos_reservados{
     color: white;
 }
 
-@media (max-width: 604px) {
-    body{
-        font-size: 12px;
-    }
+@media (max-width: 500px){
 
     main {
-        padding-top: 105px;
-    }
-
-    header{
-        width: 100%;
-        font-size: 12px;
-    }
-    .encabezado {
-        flex-direction: column;
-        width: 100%;
-    }
-
-    .logo_nombre {
-        width: 100%;
-        display: flex;
-        justify-content: center;
+        padding-top: 66px;
     }
     .video{
         height: auto;
     }
-    .panel_nav {
-        width: 100%;
-        padding-right: 15px;
-        padding-left: 15px;
-        padding-bottom: 10px;
-        padding-top: 10px;
+    .frase_autor{
+        line-height: 20px;
     }
-
     .frase {
         font-size: 25px;
     }
@@ -328,101 +263,77 @@ footer{
     .autor {
         font-size: 16px;
     }
-
     .seccion_estudio{
-        padding-top: 0px;
+        font-size: 13px;
     }
-    .seccion {
-        flex-direction: column;
-        padding-top: 15px;
+    
+    .estudio{
+        text-align: justify;
+        line-height: 35px;
+        padding-bottom: 30px;
     }
-    .elestudio{
+
+    .el_estudio{
         font-size: 25px;
     }
-
-    .estudio {
-        width: 100%;
-    }
-
-    .abogada { 
-        width:100%;
-
-    }
+    
     .dra{
         line-height: 40px;
         font-size: 18px;
     }
-    .imagen{
-        padding-top: 20px;
-    }
-    .seccion_servicios {
-        flex-direction: column;
-        gap: 40px;
-        padding-top: 20px;
-        padding-bottom: 30px;
-    }
+
     .servicios{
-        padding-top: 30px;
-        padding-bottom: 10px;
         font-size: 25px;
     }
-    .seccion_general{
-        padding-bottom: 40px;
-    }
-
-    .derecho_familia, .derecho_sucesorio, .abogacia_preventiva {
-        width: 100%;
-        height: auto;
+    h5{
+        font-size: 16px;
     }
     .consulta_boton{
         width: 200px;
-        margin-top: 0px;
-        font-size: 16px; 
-        margin-bottom: 0px; 
+        font-size: 18px; 
     }
 
-    .contacto_formulario {
-        flex-direction: column;
-        padding: 0;
-        margin-top: 10px;
+    .datos_contacto{
+        padding-left: 0;
+        margin-top: 30px;
     }
-
-    .formulario {
-        width: 100%;
-    }
-
-    .datos_contacto {
-        width: 100%;
-        margin-top: 25px;
-    }
-
-    .mensaje {
-        width: 100%;
+    .oficina{
+        padding-bottom: 15px;
     }
     .contacto{
+        padding-bottom: 20px;
         font-size: 25px;
     }
+    .consulta{
+        font-size: 18px;
+    }
+    .comentarios{
+        font-size: 13px;
+    }
+    .direccion_icono{
+        font-size: 30px;
+    }
+    .email_icono{
+        font-size: 30px;
+    }
+    .cel_icono{
+        font-size: 30px;
+    }
+    .horario_icono{
+        font-size: 30px;
+    }  
 
-    .navegacion{
-        display: table;
-        line-height: 25px;
-    }
-    
-    .titulo{
-        font-size: 15px;
+    .direccion_texto{
+        margin-left: 10px;
+        line-height: 30px;
     }
 
-}
-@media (min-width: 485px){
-    .seccion_servicios{
-        padding-left: 75px;
-        padding-right: 75px;
-    }
-}
-@media (max-width: 500px){
     .container_footer{
         flex-direction: column;
         line-height: 25px;
+    }
+    .titulo{
+        font-size: 15px;
     }
     .derechos_reserv{
         padding-top: 5px;
@@ -430,312 +341,194 @@ footer{
     }
     
 }
-@media (min-width:605px){
+@media (max-width: 337px){
     main {
-        padding-top: 70px;
+        padding-top: 106px;
     }
-    header{
-        width: 100%;
-        font-size: 12px;
-    }
-    .encabezado {
-        width: 100%;
-    }
-    .logo_nombre{
-        margin-left: 10px;
-    }
-
-    .nombre_sitio{
-        font-size: 15px;
-    }
-    .panel_nav{
-        width: 50%;
-        font-size: 13px;
-        margin-right: 20px;
-    }
-
     .video{
         height: auto;
-        width: 100%;
+    }
+    .frase_autor{
+        line-height: 20px;
     }
     .frase {
-        font-size: 35px;
-    }
-
-    .seccion_estudio{
-        padding-top: 0px;
-    }
-    .seccion {
-        flex-direction: column;
-        padding-top: 20px;
-    }
-    .elestudio{
         font-size: 25px;
     }
-
-    .estudio {
-        width: 90%;
-        padding-left: 30px;
+    
+    .autor {
+        font-size: 16px;
     }
-
-    .abogada { 
-        width:90%;
-
+}
+@media (min-width: 501px){
+    main{
+        padding-top: 60px;
     }
-    .dra{
-        line-height: 40px;
-        font-size: 18px;
-        padding-top: 15px;
+    .video{
+        height: auto;
     }
-    .imagen{
-        width: 90%;
-        padding-top: 20px;
-        display: flex;
-        justify-content: center;
-        padding-right: 30px;
+    .frase_autor{
+        line-height: 25px;
     }
-
+    .frase {
+        font-size: 30px;
+    }
     .autor {
         font-size: 20px;
     }
-    .seccion_general{
-        background-color: #dddbcb;
-        padding-bottom: 60px;   
-    }
-    
-    .servicios{
-        font-size: 25px;
-    }
-    
-    .seccion_servicios{
-        flex-wrap: wrap;
-        padding-left: 30px;
-        padding-right: 30px;
-        padding-bottom: 30px;
-        padding-top: 35px;
-    }
-    .derecho_familia{
-        width: 50%;
-        height: 320px;
-        padding: 10px;
-    }
-    .derecho_sucesorio{
-        width: 50%;
-        height: 320px;
-        padding: 10px;
-    }
-    .abogacia_preventiva{
-        width: 50%;
-        height: 320px;
-        padding: 10px;
-    }
-    .consulta_boton{
-        margin-top: 0;
-    }
-    .contacto_formulario {
-        flex-direction: column;
-        padding: 0;
-        margin-top: 10px;
-    }
-
-    .formulario {
-        width: 100%;
-    }
-
-    .datos_contacto {
-        width: 100%;
-        margin-top: 25px;
-    }
-
-    .mensaje {
-        width: 100%;
-    }
-    .contacto{
-        font-size: 25px;
-    }
-
-    .navegacion{
-        display: table;
-        line-height: 25px;
-    }
-    
-    .titulo{
-        font-size: 15px;
-    }
-}
-@media (min-width:700px){
-
-    .contacto{
-        font-size: 25px;
-    }
-    .contacto_formulario{
-        flex-direction: row;
-        margin: 40px;
-        gap: 40px;
-        margin-top: 25px;
-        
-    }
-    .formulario{
-        width: 50%;
-        margin-top: 0;
-    }
-    
-    .datos_contacto{
-        width: 50%;
-        margin-top: 0;
-    }
-   
-}
-@media(min-width:950px){
-
-    .frase {
-        font-weight: 600;
-        font-size: 50px;
-    }
-    
-    .autor {
-        font-size: 30px;
-    }
-    .seccion_estudio{
-        padding-top: 0px;
-        padding-bottom: 10px;
-    }
-    
-    .seccion{
-        flex-direction: row;
-        align-items: center;
-        padding-top: 30px;
-        padding-bottom: 30px;
-        padding-right: 40px;
-        padding-left: 40px;
-        font-size: 14px;
-
-    }
     .estudio{
-        width: 45%;
+        line-height: 45px;
+        padding-bottom: 30px;
     }
-    .elestudio{
+    .el_estudio{
         font-size: 30px;
     }
     
     .dra{
-        text-align: center;
         line-height: 40px;
-    }
-    .imagen{
-        width: 50%;
-        display: flex;
-        justify-content: flex-end;
+        font-size: 24px;
     }
 
+    .servicios{
+        font-size: 30px;
+    }
+    h5{
+        font-size: 20px;
+    }
+    .consulta_boton{
+        width: 200px;
+        font-size: 18px; 
+    }
+    .datos_contacto{
+        padding-left: 10px;
+    }
+    .oficina{
+        padding-bottom: 15px;
+    }
+    .contacto{
+        padding-bottom: 20px;
+        font-size: 30px;
+    }
+    .consulta{
+        font-size: 24px;
+    }
+    .comentarios{
+        font-size: 16px;
+    }
 }
-@media(min-width:1000px){
-    
-    .logo_nombre{
-        display: flex;
-        align-items: center;
-        margin-left: 10px;
+@media (min-width: 768px){
+
+    main{
+        padding-top: 60px;
+    }
+
+    .frase {
+        font-size: 40px;
     }
     
-    .nombre_sitio{
+    .autor {
+        font-size: 25px;
+    }
+    
+    .seccion_estudio{
         font-size: 16px;
     }
     
-    .panel_nav{
-        margin-right: 40px;
-        width: 45%;
-        padding-top: 17px;
-    
-    }  
-    .frase {
+    .estudio{
+        line-height: 35px;
+        padding-bottom: 50px;
+    }
+    .el_estudio{
+        font-size: 30px;
+    } 
+    .dra{
+        line-height: 55px;
+        font-size: 20px;
+    }
+    .imagen{
+        height: 80%;
+        padding-top: 100px;
+    }
+    .servicios{
+        font-size: 30px;    
+    }
+    h5{
+        font-size: 30px;
+    }
+    .contacto{
+        font-size: 30px;
+    }
+    .consulta{
+        font-size: 20px;
         font-weight: 600;
+        margin-top: 5px;
+    }
+}
+@media (max-width: 991px){
+    #navlinks{
+        gap: 10px;
+    }
+}
+@media (min-width: 1000px){
+
+    .frase_autor{
+        line-height: 50px;
+    }
+    .frase {
         font-size: 60px;
     }
-    
     .autor {
         font-size: 35px;
     }
-    .seccion_estudio{
-        padding-top: 0px;
-        padding-bottom: 10px;
-    }
-    
-    .seccion{
-
-        padding-top: 50px;
-        padding-bottom: 70px;
-        padding-left: 40px;
-        padding-right: 40px;
-    }
     .estudio{
-        width: 50%;
-        line-height: 35px; 
+        line-height: 45px;
+        padding-bottom: 80px;
     }
-    .elestudio{
-        text-align: center;
+    .seccion_estudio{
+        font-size: 18px;
+    }
+    .el_estudio{
         font-size: 35px;
-        font-weight: 900;
-        padding-top: 30px;
     }
     
     .dra{
-        line-height: 50px;
+        line-height: 40px;
+        font-size: 25px;
     }
+    
     .imagen{
-        padding-top: 5px;
+        height: 100%;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
 
-    }
-    .seccion_general{
-        padding-bottom: 50px;
-        
-    }
     .servicios{
         font-size: 35px;
     }
-    
-    .seccion_servicios{
-        padding-left: 40px;
-        padding-right: 40px;
-    }
-    .derecho_familia{
-        width: 33%;
-        height: 320px;
-    }
-    .derecho_sucesorio{
-        width: 33%;
-        height: 320px;
-    }
-    .abogacia_preventiva{
-        width: 33%;
-        height: 320px;
+    h5{
+        font-size: 38px;
     }
     .consulta_boton{
-        margin-top: 15px;
-        margin-bottom: 15px;
+        width: 250px;
+        padding: 15px;
+        margin-top: 50px;
+        font-size: 20px;
+    }
+    .oficina{
+        padding-bottom: 15px;
     }
     .contacto{
+        padding-bottom: 40px;
         font-size: 35px;
     }
-    .contacto_formulario{
-        flex-direction: row;
-        margin: 40px;
-        gap: 40px;
-        margin-top: 25px;
-        
+    .consulta{
+        font-size: 24px;
     }
-    .formulario{
-        width: 50%;
-        margin-top: 0;
+    .comentarios{
+        font-size: 16px;
     }
-    
     .datos_contacto{
-        width: 50%;
-        margin-top: 0;
+        padding-left: 80px;
+        font-size: 16px;
     }
-    
-    .titulo{
-        font-size: 17px;
-    }
- 
-
+   
 }
