--- a/css/estilosestudio.css
+++ b/css/estilosestudio.css
@@ -50,7 +50,7 @@ h3{
     font-size: 16px;
 }
 .seccion_estudio{
-    background-color: #f5f1e3;
+    background-color:#f5f5f5;
     font-size: 18px;
     padding-top: 80px;
     padding-bottom: 70px;
