--- a/css/estilosindex.css
+++ b/css/estilosindex.css
@@ -85,7 +85,7 @@ h3{
 }
 
 .seccion_estudio{
-    background-color: #f5f1e3;
+    background-color: #f5f5f5;
     font-size: 18px;
 }
 
@@ -114,7 +114,7 @@ h3{
 }
 
 .seccion_general{
-    background-color: #dddbcb;
+    background-color: #d1d0c4;
     padding-bottom: 70px;   
 }
 
@@ -163,6 +163,7 @@ h5{
 .boton_enviar{
     display: flex;
     justify-content: flex-end;
+    gap: 18px;
 }
 .comentarios{
     line-height: 30px;
